// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostAuthor renders author with an avatar, name and read time 1`] = `
<section
  className="jsx-1646516357"
>
  <div
    className="jsx-1646516357 authors"
  >
    <div
      className="jsx-3144626491 avatar"
    >
      <img
        alt="The dashing Sir Bloblog avatar"
        className="jsx-3162327209"
        sizes="72px"
        src="//i1-qa.adis.ws/i/bloblogltd/man-business-suit"
        srcSet="//i1-qa.adis.ws/i/bloblogltd/man-business-suit?w=72&h=72&sm=c&scaleFit=poi&poi=%7B%24this.metadata.pointOfInterest.x%7D%2C%7B%24this.metadata.pointOfInterest.y%7D%2C%7B%24this.metadata.pointOfInterest.w%7D%2C%7B%24this.metadata.pointOfInterest.h%7D 72w"
      />
    </div>
    <div
      className="jsx-1646516357 name"
    >
      Sir Bloblog
    </div>
  </div>
  <div
    className="jsx-1646516357 date"
  >
    2019-08-14
  </div>
  <div
    className="jsx-1646516357 readTime"
  >
    15
     mins read
  </div>
</section>
`;

exports[`BlogPostAuthor renders author without an avatar, but still has name and read time 1`] = `
<section
  className="jsx-1646516357"
>
  <div
    className="jsx-1646516357 authors"
  >
    <div
      className="jsx-1646516357 name"
    >
      Sir Bloblog
    </div>
  </div>
  <div
    className="jsx-1646516357 date"
  >
    2019-08-14
  </div>
  <div
    className="jsx-1646516357 readTime"
  >
    15
     mins read
  </div>
</section>
`;
